--- a/styles.css
+++ b/styles.css
@@ -1,162 +1,269 @@
-@font-face{
+@font-face {
   font-family: "PT Sans";
-  font-style: normal;
-  font-weight: 400;
   src: url("../fonts/ptsans-400.woff2") format("woff2");
-  font-display: swap;
-  }
-
-  @font-face{
-  font-family: "PT Sans";
+  font-weight: 400;
   font-style: normal;
-  font-weight: 700;
-  src: url("../fonts/ptsans-700.woff2") format("woff2");
   font-display: swap;
-  }
+}
 
-  body{
-      font-family: "PT Sans", sans-serif;
-      font-size: 18px;
-      font-weight:400;
-      line-height: 21px;
-      color:#333333;
-      background-color:#FFFFFF;
-  }
+@font-face {
+  font-family: "PT Sans";
+  src: url("../fonts/ptsans-700.woff2") format("woff2");
+  font-weight: 700;
+  font-style: normal;
+  font-display: swap;
+}
 
-  .button {
-      font-family:"PT Sans", sans-serif;
-      color:#FFFFFF;
-      text-transform: uppercase;
-      text-decoration:none;
-      text-align:center;
-  }
+html {
+  height: 100%;
+}
 
-  .navigation-item .button {
-      font-size: 16px;
-      font-weight:700;
-      line-height: 20px;
-      background-color:#756257;
-  }
+img {
+  max-width: 100%;
+  height: auto;
+  object-fit: contain;
+}
 
-  .page-header{
-      color:#000000;
-      background-color:#ffffff;
-  }
-  .navigation-link{
-      font-family: "PT Sans", sans-serif;
-      font-weight: 700;
-      font-size: 20px;
-      line-height: 26px;
-      color:#000000;
-      background-color:#ffffff;
-      text-decoration:none;
-      text-align:center;
-  }
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
 
-  .main-index{
-      color:#333333;
-      background-color:#f2f2f2;
-      background-image: url("../images/index-background.jpg");
-      background-size: 100% auto;
-      background-repeat: no-repeat;
-  }
+body {
+  font-family: "PT Sans", sans-serif;
+  font-size: 18px;
+  line-height: 21px;
+  background-color: #F2F2F2;
+  color: #000000;
+  margin: 0;
+  display: flex;
+  flex-direction: column;
+  min-height: 100%;
+}
 
-  h2 {
-      font-family: "PT Sans", sans-serif;
-      font-weight: 700;
-      font-size: 30px;
-      line-height: 36px;
-      text-transform: uppercase;
-  }
+.page-container {
+  width: 1200px;
+  margin: 0 auto;
+  box-shadow: 0 0 15px 0 rgba(0, 0, 0, 0.20);
+}
 
-  h3 {
-      font-family: "PT Sans", sans-serif;
-      font-weight: 700;
-      font-size: 24px;
-      line-height: 28px;
-      text-transform: uppercase;
-  }
+.main-container {
+  flex-grow: 1;
+}
 
-  .city-intro {
-      text-align:center
-  }
+.content-container {
+  margin: 0 auto;
+  width: 1060px;
+}
 
-  .advantages-intro{
-      text-align:center
-  }
+.page-header,
+.main-index,
+.main-inner,
+.page-footer {
+  background-color: #ffffff;
+}
 
-  .advantages-list {
-      text-align:center;
-  }
+.navigation {
+  display: flex;
+}
 
-  .advantages-item {
-      font-family: "PT Sans", sans-serif;
-      font-weight: 400;
-      font-size: 18px;
-      line-height: 21px;
-      color: #333333;
-  }
+.navigation-logo .navigation-logo-img {
+  display: block;
+}
 
-  li.advantages-item:nth-child(1),
-  li.advantages-item:nth-child(2) {
-      color: #FFFFFF;
-      background-color:#83b3d3;
-  }
+.navigation-list {
+  margin: 0;
+  margin-right: auto;
+  padding: 0;
+  width: 550px;
+  list-style: none;
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+}
 
-  li.advantages-item:nth-child(3),
-  li.advantages-item:nth-child(5) {
-      background-color:rgba(131, 179, 211, 0.12);
-  }
+.navigation-user {
+  max-width: 300px;
+  list-style: none;
+  display: flex;
+  margin-block: 0;
+  padding: 0;
+  align-items: center;
+  flex-wrap: wrap;
+  margin-inline: auto 20px;
+}
 
-  li.advantages-item:nth-child(4) {
-      background-color:rgba(131, 179, 211, 0.2);
-  }
+.navigation-link {
+  padding: 20px 16px;
+  position: relative;
+}
 
-  .advantages-subitem {
-      color: #333333;
-      background-color:rgba(131, 179, 211, 0.12);
-  }
+.navigation-link:hover {
+  -webkit-text-decoration-color: #82B3D3;
+  text-decoration-color: #82B3D3;
+  -webkit-text-decoration-line: underline;
+  text-decoration-line: underline;
+  text-decoration-thickness: 3px;
+  text-underline-offset: 23px;
+}
 
-  .hotel-search {
-      text-align: center;
-  }
+.navigation-link:focus-visible {
+  opacity: 0.5;
+}
 
-  .hotel-search .button {
-      font-size: 20px;
-      font-weight:700;
-      line-height: 36px;
-      background-color:#756257;
+.navigation-link:active {
+  opacity: 0.3;
+}
 
-  }
+.link-active::before {
+  content: "";
+  background-color: #756257;
+  height: 2px;
+  position: absolute;
+  left: 16px;
+  right: 16px;
+  bottom: -1px;
+}
 
-  .newsletter {
-      text-align: center;
-      color:#ffffff;
-      background-image: url("../images/subscribe-form-background.jpg");
-  }
+.navigation-user-favourite {
+  position: relative;
+  background: url("../images/icons/heart.svg") no-repeat center;
+}
 
-  .button-newsletter-button {
-      font-size:20px;
-      font-weight:700;
-      line-height:26px;
-      color:#FFFFFF;
-      background-color:#83b3d3;
-      text-align:center;
-      text-transform:uppercase;
-  }
+.navigation-user-search {
+  background: url("../images/icons/search.svg") no-repeat center;
+}
 
-  .footer-social-item {
-      color:#333333;
-  }
 
-  .contacts-phone {
-      font-family: "PT Sans", sans-serif;
-      font-size:40px;
-      font-weight:400;
-      line-height:40px;
-      color:#000000;
-      text-align:center;
-      text-transform:uppercase;
-  }
+.navigation-user-search:hover,
+.navigation-user-favourite:hover {
+  opacity: 0.6;
+}
 
-    
+.navigation-user-search:focus-visible,
+navigation-user-favourite:focus-visible {
+  opacity: 0.6;
+}
+
+.navigation-user-search:active,
+navigation-user-favourite:active {
+  opacity: 0.3;
+}
+
+.navigation-button {
+  padding: 8px 34px;
+  align-self: center;
+  border-radius: 4px;
+  min-width: 160px;
+}
+
+.navigation-button:hover,
+.navigation-button:focus-visible {
+  background-color: #615048;
+}
+
+.navigation-button:active {
+  background: #756157;
+  color: #FFFFFF4D;
+}
+
+
+.visually-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  padding: 0;
+  border: 0;
+  clip: rect(0 0 0 0);
+  overflow: hidden;
+}
+
+.navigation-link,
+.navigation-user-link {
+  text-decoration: none;
+  text-align: center;
+  color: #000000;
+  font-weight: 700;
+  font-size: 20px;
+  display: block;
+  line-height: 24px;
+}
+
+.navigation-user-link {
+  padding: 20px 22px;
+  min-width: 18px;
+  min-height: 20px;
+}
+
+.navigation-user-item {
+  min-width: 44px;
+  min-height: 64px;
+  display: flex;
+}
+
+.favourite-count {
+  font-size: 10px;
+  line-height: 20px;
+  text-align: center;
+  font-weight: 400;
+  color: #ffffff;
+  background-color: #7DB54F;
+  border-radius: 50%;
+  display: block;
+  min-width: 20px;
+  min-height: 20px;
+  position: absolute;
+  left: 20px;
+  top: 10px;
+}
+
+.navigation-logo {
+  display: block;
+  margin-right: 30px;
+  width: 138px;
+  margin-bottom: -6px;
+}
+
+.navigation-logo:hover,
+.navigation-logo:focus {
+  opacity: 0.6;
+}
+
+.navigation-logo:active {
+  opacity: 0.3;
+}
+
+.button {
+  font-size: 16px;
+  line-height: 20px;
+  text-transform: uppercase;
+  color: #ffffff;
+  background-color: #756157;
+  text-decoration: none;
+  text-align: center;
+  font-weight: 700;
+  border: none;
+  font-family: inherit;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+.hero {
+  background-color: #d4cfcc;
+  background-image: url("../images/divider.svg"), url("images/index-background.png");
+  background-size: 100% auto, cover;
+  background-position: bottom, top;
+  background-repeat: no-repeat;
+  min-height: 485px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.hero-img {
+  display: block;
+  margin: 0 auto;
+  margin-bottom: 32px;
+}
