--- a/styles/styles.css
+++ b/styles/styles.css
@@ -255,7 +255,7 @@ body {
   padding-top: 51px;
   padding-bottom: 78px;
   text-align: center;
-  background-image: url("/2552419-sedona-2/images/background-hero.jpg");
+  background-image: url("../images/background-hero.jpg");
   background-size: cover;
   background-repeat: no-repeat;
   background-color: #26343f;
